<resources>
    <string name="app_name">Unifi</string>
    <string name="old_account">Already have an account?</string>
    <string name="new_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="email_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_name">Name</string>
    <string name="chats">Chats</string>
    <string name="request">Friend Requests</string>
    <string name="friends">Friends</string>
    <string name="enter_status">Status</string>
    <string name="enter_username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_message">Type here</string>
</resources>
