<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/unifi_background"
    tools:context=".UnifyLoginActivity">

    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="6dp"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:textColor="@android:color/background_light"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:layout_marginBottom="-2dp"
        android:ems="10"
        android:hint="@string/email_password"
        android:inputType="textMultiLine|textPassword"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default" />

    <Button
        android:id="@+id/button"
        android:layout_width="174dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="98dp"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:text="@string/old_account"
        android:textColor="@android:color/background_light"
        android:textSize="8sp" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="190dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textMultiLine|textEmailAddress"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default" />
</RelativeLayout>